{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 127,
  "lineage": "c220ee8a-43ee-3e8f-01af-11b06e8e87c7",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334997284084:network-acl/acl-039b9ff9dbc180978",
            "default_network_acl_id": "acl-039b9ff9dbc180978",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-039b9ff9dbc180978",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "334997284084",
            "subnet_ids": [
              "subnet-0099260ab83ef5f27",
              "subnet-01367e16939b067dd",
              "subnet-0c9550a088b109e08",
              "subnet-0d939fbd324192696"
            ],
            "tags": {
              "Name": "uda-dataeng-udacity-dev-vpc-default",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "uda-dataeng-udacity-dev-vpc-default",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            },
            "vpc_id": "vpc-092c80ee8a35c706e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334997284084:route-table/rtb-0030b9425e219331c",
            "default_route_table_id": "rtb-0030b9425e219331c",
            "id": "rtb-0030b9425e219331c",
            "owner_id": "334997284084",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "uda-dataeng-udacity-dev-vpc-default",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "uda-dataeng-udacity-dev-vpc-default",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-092c80ee8a35c706e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334997284084:security-group/sg-0296ff600518f2114",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0296ff600518f2114",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "334997284084",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "uda-dataeng-udacity-dev-vpc-default",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "uda-dataeng-udacity-dev-vpc-default",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            },
            "vpc_id": "vpc-092c80ee8a35c706e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04393dd39ae3c8848",
            "domain": "vpc",
            "id": "eipalloc-04393dd39ae3c8848",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-214-244-215.compute-1.amazonaws.com",
            "public_ip": "44.214.244.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "uda-dataeng-udacity-dev-vpc-us-east-1b",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "uda-dataeng-udacity-dev-vpc-us-east-1b",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e36e11ac63a1ec5e",
            "domain": "vpc",
            "id": "eipalloc-0e36e11ac63a1ec5e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-50-17-86-160.compute-1.amazonaws.com",
            "public_ip": "50.17.86.160",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "uda-dataeng-udacity-dev-vpc-us-east-1c",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "uda-dataeng-udacity-dev-vpc-us-east-1c",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334997284084:internet-gateway/igw-027edb89bb1fde9ba",
            "id": "igw-027edb89bb1fde9ba",
            "owner_id": "334997284084",
            "tags": {
              "Name": "uda-dataeng-udacity-dev-vpc",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "uda-dataeng-udacity-dev-vpc",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            },
            "vpc_id": "vpc-092c80ee8a35c706e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04393dd39ae3c8848",
            "association_id": "eipassoc-070351805503cfff7",
            "connectivity_type": "public",
            "id": "nat-0cda774290fb377f6",
            "network_interface_id": "eni-03da09f1fbc2b1730",
            "private_ip": "10.0.101.182",
            "public_ip": "44.214.244.215",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0099260ab83ef5f27",
            "tags": {
              "Name": "uda-dataeng-udacity-dev-vpc-us-east-1b",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "uda-dataeng-udacity-dev-vpc-us-east-1b",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e36e11ac63a1ec5e",
            "association_id": "eipassoc-09f5e6e068841f4a7",
            "connectivity_type": "public",
            "id": "nat-0e6144dc987b9e1d9",
            "network_interface_id": "eni-05f5ffb33305e338d",
            "private_ip": "10.0.102.87",
            "public_ip": "50.17.86.160",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01367e16939b067dd",
            "tags": {
              "Name": "uda-dataeng-udacity-dev-vpc-us-east-1c",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "uda-dataeng-udacity-dev-vpc-us-east-1c",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08eb4233bd4cc18781080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cda774290fb377f6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08eb4233bd4cc1878",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02c75a8302dd087e91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e6144dc987b9e1d9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02c75a8302dd087e9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-027edb89bb1fde9ba",
            "id": "r-rtb-06b06277a6ec5a7641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06b06277a6ec5a764",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334997284084:route-table/rtb-08eb4233bd4cc1878",
            "id": "rtb-08eb4233bd4cc1878",
            "owner_id": "334997284084",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "uda-dataeng-udacity-dev-vpc-private-us-east-1b",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "uda-dataeng-udacity-dev-vpc-private-us-east-1b",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-092c80ee8a35c706e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334997284084:route-table/rtb-02c75a8302dd087e9",
            "id": "rtb-02c75a8302dd087e9",
            "owner_id": "334997284084",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "uda-dataeng-udacity-dev-vpc-private-us-east-1c",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "uda-dataeng-udacity-dev-vpc-private-us-east-1c",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-092c80ee8a35c706e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334997284084:route-table/rtb-06b06277a6ec5a764",
            "id": "rtb-06b06277a6ec5a764",
            "owner_id": "334997284084",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "uda-dataeng-udacity-dev-vpc-public",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "uda-dataeng-udacity-dev-vpc-public",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-092c80ee8a35c706e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7cdc4b296586314",
            "route_table_id": "rtb-08eb4233bd4cc1878",
            "subnet_id": "subnet-0c9550a088b109e08"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034ff7ffb9d23f156",
            "route_table_id": "rtb-02c75a8302dd087e9",
            "subnet_id": "subnet-0d939fbd324192696"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0497c3ebaa0104b52",
            "route_table_id": "rtb-06b06277a6ec5a764",
            "subnet_id": "subnet-0099260ab83ef5f27"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013817c8d9bd32103",
            "route_table_id": "rtb-06b06277a6ec5a764",
            "subnet_id": "subnet-01367e16939b067dd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334997284084:subnet/subnet-0c9550a088b109e08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9550a088b109e08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "334997284084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Private Subnets",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "VPC Private Subnets",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            },
            "vpc_id": "vpc-092c80ee8a35c706e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334997284084:subnet/subnet-0d939fbd324192696",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d939fbd324192696",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "334997284084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Private Subnets",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "VPC Private Subnets",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            },
            "vpc_id": "vpc-092c80ee8a35c706e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334997284084:subnet/subnet-0099260ab83ef5f27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0099260ab83ef5f27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "334997284084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Public Subnets",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "VPC Public Subnets",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            },
            "vpc_id": "vpc-092c80ee8a35c706e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334997284084:subnet/subnet-01367e16939b067dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01367e16939b067dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "334997284084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VPC Public Subnets",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "VPC Public Subnets",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            },
            "vpc_id": "vpc-092c80ee8a35c706e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334997284084:vpc/vpc-092c80ee8a35c706e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-039b9ff9dbc180978",
            "default_route_table_id": "rtb-0030b9425e219331c",
            "default_security_group_id": "sg-0296ff600518f2114",
            "dhcp_options_id": "dopt-0d8aaccedad89d896",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-092c80ee8a35c706e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0030b9425e219331c",
            "owner_id": "334997284084",
            "tags": {
              "Name": "uda-dataeng-udacity-dev-vpc",
              "environment": "dev",
              "owners": "udacity"
            },
            "tags_all": {
              "Name": "uda-dataeng-udacity-dev-vpc",
              "comments": "this resource is managed by terraform",
              "environment": "dev",
              "owners": "udacity",
              "project": "uda-dataeng",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}